Fix navigation spacing, fix rwd

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -7,6 +7,7 @@
   justify-content: space-between;
   position: relative;
   z-index: 1;
+  align-items: center;
 
   p {
     color: white;
