--- a/src/components/header/navigation/navigation.module.scss
+++ b/src/components/header/navigation/navigation.module.scss
@@ -5,8 +5,8 @@
   top: 0%;
   left: 0;
   width: 100%;
-  height: auto;
-  padding-bottom: 3.2rem;
+  height: min(50rem, 100vh);
+  padding-bottom: 2.4rem;
   background-color: #a1988f;
   display: flex;
   flex-direction: column;
@@ -15,6 +15,7 @@
   padding-top: var(--header__height);
   z-index: -1;
   transition: transform 0.3s;
+  justify-content: space-between;
 
   @include breakpoint('lg') {
     flex-direction: row;
@@ -38,11 +39,12 @@ ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  flex: 1 1 50%;
+  flex: 1 1 auto;
   display: flex;
   flex-direction: column;
-  gap: 1.2rem;
   text-align: center;
+  height: 100%;
+  justify-content: space-evenly;
 
   @include breakpoint('lg') {
     flex-direction: row;
@@ -54,11 +56,12 @@ ul {
     color: white;
     font-size: 2rem;
     font-weight: 400;
-    padding: 1.6rem;
+    padding: 0.8rem 1.6rem;
     line-height: 2.4rem;
     transition: color 0.2s;
     white-space: nowrap;
     cursor: pointer;
+    flex: 0 0 auto;
 
     @include breakpoint('lg') {
       padding: 0.8rem 1.6rem;
