--- a/src/sections/about/about.module.scss
+++ b/src/sections/about/about.module.scss
@@ -3,7 +3,7 @@
 .container {
   width: 100%;
   padding: 6rem var(--container__padding-horizontal);
-  min-height: 100vh;
+  min-height: min(70rem, 100vh);
   display: flex;
   align-items: center;
 
